--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -8,12 +8,16 @@
         /* General Body Styles */
         body {
             margin: 0;
-            padding: 20px;
+            padding: 0; /* Remove extra padding to avoid affecting centering */
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             background: #1a1a1a;
             color: #ffffff;
             overflow: hidden; /* Prevent scrolling */
             height: 100vh;
+            width: 100vw; /* Ensure it spans the full width of the viewport */
+            display: flex; /* Enable flexbox for easy centering */
+            justify-content: center; /* Horizontally center content */
+            align-items: center; /* Vertically center content */
             box-sizing: border-box;
         }
 
@@ -204,7 +208,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to left, rgba(153, 153, 153, 0.7), rgba(0, 0, 0, 0));
+            /* background: linear-gradient(to left, rgba(153, 153, 153, 0.7), rgba(0, 0, 0, 0)); */
+            background: linear-gradient(to left, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
             pointer-events: none;
             z-index: 2;
         }
@@ -310,18 +315,47 @@
 
         /* Message Pop-up */
         #message {
-            position: fixed;
-            left: 50%;
+            position: absolute;
             top: 50%;
+            left: 50%;
             transform: translate(-50%, -50%);
-            padding: 20px;
-            border-radius: 8px;
+            background: #000000;
+            padding: 40px;
+            min-width: 300px;
+            max-width: 400px;
             text-align: center;
-            display: none;
-            z-index: 1000;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-            animation: fadeIn 0.3s ease;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            z-index: 10;
+            display: none; /* Hidden by default */
         }
+
+        #message div {
+            color: #ffffff;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        #message button {
+            background: #333333;
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            margin-top: 20px;
+            font-size: 18px;
+            cursor: pointer;
+            width: 200px;
+        }
+
+        #message button:hover {
+            background: #444444;
+        }
+
+        /* Update classes */
+        .success, .error {
+            background: #000000 !important;
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -548,8 +582,7 @@
                 </div>
             </div>
             <div class="button-container">
-                <button id="retryButton">Retry Level</button>
-                <button id="newGameButton">New Game</button>
+                <button id="newGameButton">Menu</button>
             </div>
         </div>
         <div id="maze-grid"></div>
