--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -4,566 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karma Maze</title>
-    <style>
-        /* General Body Styles */
-        body {
-            margin: 0;
-            padding: 0; /* Remove extra padding to avoid affecting centering */
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background: #1a1a1a;
-            color: #ffffff;
-            overflow: hidden; /* Prevent scrolling */
-            height: 100vh;
-            width: 100vw; /* Ensure it spans the full width of the viewport */
-            display: flex; /* Enable flexbox for easy centering */
-            justify-content: center; /* Horizontally center content */
-            align-items: center; /* Vertically center content */
-            box-sizing: border-box;
-        }
-
-        /* Game Container */
-        #game-container {
-            max-width: 800px;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-            height: calc(100vh - 40px); /* Account for padding */
-            overflow: hidden;
-        }
-
-        /* Stats Section */
-        #stats {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-            padding: 10px;
-            background: #2d2d2d;
-            border-radius: 8px;
-        }
-
-        /* Maze Grid */
-        #maze-grid {
-            display: grid;
-            gap: 1px;
-            /* background: #2d2d2d; */
-            padding: 10px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            overflow: hidden;
-            margin: 0 auto;
-        }
-
-        /* Cell Styles */
-        .cell {
-            width: 40px;
-            height: 40px;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* Cell States */
-        .path {
-            background: #4a4a4a;
-        }
-        .wall {
-            background: #1a1a1a;
-            cursor: not-allowed;
-        }
-        .door {
-            background: #594a00;
-        }
-        .door:hover {
-            background: #8c7300;
-        }
-
-        /* Player base styles */
-        .player {
-            position: relative;
-            background: #4a4a4a !important;
-        }
-
-        /* The main white ball */
-        .player::after {
-            content: '';
-            position: absolute;
-            left: 4px;
-            top: 4px;
-            width: calc(100% - 8px);
-            height: calc(100% - 8px);
-            background: white;
-            border-radius: 50%;
-            box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-            z-index: 2;
-        }
-
-        .player.move-right::before,
-        .player.move-left::before,
-        .player.move-up::before,
-        .player.move-down::before {
-            content: '';
-            position: absolute;
-            left: 4px;
-            top: 4px;
-            width: calc(100% - 8px);
-            height: calc(100% - 8px);
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 50%;
-            z-index: 1;
-        }
-
-        .player.move-right::before {
-            animation: trailRight 0.2s ease-out;
-        }
-
-        .player.move-left::before {
-            animation: trailLeft 0.2s ease-out;
-        }
-
-        .player.move-up::before {
-            animation: trailUp 0.2s ease-out;
-        }
-
-        .player.move-down::before {
-            animation: trailDown 0.2s ease-out;
-        }
-        @keyframes trailRight {
-            0% {
-                transform: translateX(-30px) scaleX(3);
-                opacity: 0.4;
-            }
-            100% {
-                transform: translateX(0) scaleX(1);
-                opacity: 0;
-            }
-        }
-
-        @keyframes trailLeft {
-            0% {
-                transform: translateX(30px) scaleX(3);
-                opacity: 0.4;
-            }
-            100% {
-                transform: translateX(0) scaleX(1);
-                opacity: 0;
-            }
-        }
-
-        @keyframes trailUp {
-            0% {
-                transform: translateY(30px) scaleY(3);
-                opacity: 0.4;
-            }
-            100% {
-                transform: translateY(0) scaleY(1);
-                opacity: 0;
-            }
-        }
-
-        @keyframes trailDown {
-            0% {
-                transform: translateY(-30px) scaleY(3);
-                opacity: 0.4;
-            }
-            100% {
-                transform: translateY(0) scaleY(1);
-                opacity: 0;
-            }
-        }
-        .explored {
-            opacity: 0.5;
-            visibility: visible;
-        }
-        .revealed-exit {
-            background: #4a4a4a;
-        }
-
-        /* Start and Exit Cells */
-        .start, .exit, .fake-exit, .exit1, .fake-exit1 {
-            background: #4a4a4a;
-            position: relative;
-            overflow: hidden;
-        }
-        /* Shadow overlays for all special cells */
-        .start::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-            pointer-events: none;
-            z-index: 2;  /* Put shadow over the ball */
-        }
-        .exit::before, .fake-exit::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            /* background: linear-gradient(to left, rgba(153, 153, 153, 0.7), rgba(0, 0, 0, 0)); */
-            background: linear-gradient(to left, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
-            pointer-events: none;
-            z-index: 2;
-        }
-        .exit1::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to left, rgba(0, 255, 0, 0.7), rgba(0, 255, 0, 0));
-            pointer-events: none;
-            z-index: 2;
-        }
-        .fake-exit1::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to left, rgba(255, 17, 0, 0.7), rgba(0, 255, 0, 0));
-            pointer-events: none;
-            z-index: 2;
-        }
-
-        /* Fog Effect */
-        .fog {
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s ease;
-        }
-        .visible {
-            opacity: 1;
-            visibility: visible;
-        }
-        .fog.crystal-ball, .fog.key-powerup, .fog.map {
-            opacity: 0.4;
-            visibility: visible;
-        }
-
-        /* Powerups */
-        .crystal-ball, .map, .key-powerup {
-            position: relative;
-            background: #4a4a4a !important;
-        }
-
-        .crystal-ball::after, .map::after, .key-powerup::after {
-            content: '';
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-        }
-
-        /* Visible powerups */
-        .visible.crystal-ball::after {
-            background: rgba(153, 50, 204, 0.8);
-            box-shadow: 0 0 10px rgba(153, 50, 204, 0.8),
-                        0 0 20px rgba(153, 50, 204, 0.5);
-        }
-
-        .visible.map::after {
-            background: rgba(0, 191, 255, 0.8);
-            box-shadow: 0 0 10px rgba(0, 191, 255, 0.8),
-                        0 0 20px rgba(0, 191, 255, 0.5);
-        }
-
-        .visible.key-powerup::after {
-            background: rgba(255, 215, 0, 0.8);
-            box-shadow: 0 0 10px rgba(255, 215, 0, 0.8),
-                        0 0 20px rgba(255, 215, 0, 0.5);
-        }
-
-        /* Fog state */
-        .fog {
-            opacity: 0;
-            visibility: hidden;
-        }
-
-        /* Override fog for powerups */
-        .fog.crystal-ball, .fog.map, .fog.key-powerup {
-            background: #1a1a1a !important;  /* Dark background in fog */
-            opacity: 1 !important;
-            visibility: visible !important;
-        }
-
-        .fog.crystal-ball::after, .fog.map::after, .fog.key-powerup::after {
-            width: 8px !important;
-            height: 8px !important;
-            background: rgba(255, 255, 255, 0.3) !important;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3) !important;
-            animation: mysteryPulse 2s infinite;
-        }
-
-        /* Explored state */
-        .explored.crystal-ball::after, .explored.map::after, .explored.key-powerup::after {
-            opacity: 0.3;
-        }
-
-        /* Message Pop-up */
-        #message {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: #000000;
-            padding: 40px;
-            min-width: 300px;
-            max-width: 400px;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-            z-index: 10;
-            display: none; /* Hidden by default */
-        }
-
-        #message div {
-            color: #ffffff;
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        #message button {
-            background: #333333;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            margin-top: 20px;
-            font-size: 18px;
-            cursor: pointer;
-            width: 200px;
-        }
-
-        #message button:hover {
-            background: #444444;
-        }
-
-        /* Update classes */
-        .success, .error {
-            background: #000000 !important;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translate(-50%, -60%);
-            }
-            to {
-                opacity: 1;
-                transform: translate(-50%, -50%);
-            }
-        }
-        #top-right-messages {
-            position: fixed;
-            top: 20%;
-            right: 3%;
-            z-index: 1000;
-            text-align: right;
-            display: flex;
-            flex-direction: column-reverse; /* New messages appear at the bottom */
-            gap: 5px; /* Spacing between messages */
-            pointer-events: none;
-        }
-        .top-right-message {
-            color: white;
-            font-size: 14px;
-            opacity: 1;
-            transform: translateY(0);
-            transition: opacity 0.8s ease, transform 0.8s ease; /* Smooth transitions */
-        }
-        .top-right-message.fade-out {
-            opacity: 0;
-            transform: translateY(-10px); /* Moves up slightly before disappearing */
-        }
-
-        /* Fade-out animation */
-        @keyframes fadeOut {
-            0% {
-                opacity: 1;
-            }
-            100% {
-                opacity: 0;
-                transform: translateY(-10px);
-            }
-        }
-
-        /* Buttons */
-        .button-container {
-            display: flex;
-            gap: 10px;
-        }
-        #retryButton, #newGameButton {
-            background: #4a4a4a;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-            padding: 8px 16px;
-            display: block !important;
-        }
-        #retryButton:hover, #newGameButton:hover {
-            background: #5a5a5a;
-        }
-        .success {
-            background: rgba(0, 100, 0, 0.9);
-            color: white;
-            padding: 20px 40px;
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-        .success {
-            background: #006400;
-        }
-        .error {
-            background: #640000;
-        }
-
-        /* Animations */
-        @keyframes glow {
-            from {
-                box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #9932CC;
-            }
-            to {
-                box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #9932CC;
-            }
-        }
-        /* @keyframes powerupGlow {
-            from {
-                box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073;
-            }
-            to {
-                box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6;
-            }
-        } */
-        @keyframes powerupPulse {
-            0% {
-                transform: translate(-50%, -50%) scale(1);
-                opacity: 0.8;
-            }
-            50% {
-                transform: translate(-50%, -50%) scale(1.2);
-                opacity: 1;
-            }
-            100% {
-                transform: translate(-50%, -50%) scale(1);
-                opacity: 0.8;
-            }
-        }
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25% { transform: translateX(-4px); }
-            75% { transform: translateX(4px); }
-        }
-        .shaking {
-            animation: shake 0.05s linear;
-        }
-
-        /* UNSORTED */
-        /* Stats bar styling */
-        #stats {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            padding: 10px;
-            background: #2d2d2d;
-            border-radius: 8px;
-        }
-
-        .powerup-stats {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-
-        .key-stat {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            opacity: 1;
-            transition: opacity 0.3s ease;
-        }
-
-        .key-stat.hidden {
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s ease, visibility 0s linear 0.3s;
-        }
-
-        .powerup-indicator {
-            display: flex;
-            align-items: center;
-        }
-
-        /* Orb styles */
-        .key-orb, .map-orb, .crystal-orb {
-            width: 15px;
-            height: 15px;
-            border-radius: 50%;
-            margin-right: 5px;
-        }
-
-        .key-orb {
-            background: rgba(255, 215, 0, 0.8);
-            box-shadow: 0 0 5px rgba(255, 215, 0, 0.8);
-        }
-
-        .map-orb {
-            background: rgba(0, 191, 255, 0.8);
-            box-shadow: 0 0 5px rgba(0, 191, 255, 0.8);
-        }
-
-        .crystal-orb {
-            background: rgba(153, 50, 204, 0.8);
-            box-shadow: 0 0 5px rgba(153, 50, 204, 0.8);
-        }
-
-        /* Hide key stat when count is 0 */
-        .key-stat[data-count="0"] {
-            display: none;
-        }
-
-        /* Add this to your CSS */
-.cell.visible {
-    cursor: default;  /* Default cursor for all visible cells */
-}
-
-/* Show pointer cursor for cells that can be interacted with */
-.cell.visible.path,
-.cell.visible.door,
-.cell.visible.crystal-ball,
-.cell.visible.map,
-.cell.visible.key-powerup,
-.cell.visible.exit,
-.cell.visible.fake-exit {
-    cursor: pointer;
-}
-
-.cell.adjacent:hover {
-    filter: brightness(1.2);
-    cursor: pointer;
-}
-
-/* Disable hover effect for non-adjacent cells */
-.cell.visible.not-adjacent:hover {
-    filter: none;
-    cursor: default;
-}
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game-container">
