--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="game-container">
+    <div id="game-container" tabindex="0"></div>
         <div id="stats">
             <div><span id="username">Waiting...</span></div>
             <div class="powerup-stats">
@@ -28,6 +28,11 @@
         </div>
         <div id="maze-grid"></div>
         <div id="message"></div>
+        <div id="timer">30</div>
+        <div id="loading-overlay" style="display: none;">
+            <div class="loading-spinner"></div>
+            <div class="loading-text">Loading...</div>
+        </div>
         <div id="top-right-messages"></div>
     </div>
     <script src="maze.js"></script>
