Successfully added opening door animation

--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -34,8 +34,9 @@
             <div class="loading-text">Loading...</div>
         </div>
         <div id="top-right-messages"></div>
+        <!-- Add this line -->
+        <div id="animation-overlay"></div>
     </div>
     <script src="maze.js"></script>
 </body>
-</html>
 </html>
