Added lives to the game

--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -10,6 +10,11 @@
     <div id="game-container" tabindex="0">
         <div id="stats">
             <div><span id="username">Waiting...</span></div>
+            <div class="lives-container">
+                <div class="heart-icon" data-filled="true">❤️</div>
+                <div class="heart-icon" data-filled="true">❤️</div>
+                <div class="heart-icon" data-filled="true">❤️</div>
+            </div>
             <div class="powerup-stats">
                 <div class="key-stat">
                     <div class="key-orb"></div>
