--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karma Maze</title>
+    <title>Key Maze</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
