Added win/lose prompts to match pause menu

--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -36,7 +36,6 @@
 
         <!-- Main Game Elements -->
         <div id="maze-grid"></div>
-        <div id="message"></div>
 
         <!-- Overlays -->
         <div id="loading-overlay" style="display: none;">
@@ -45,6 +44,13 @@
         </div>
         <div id="top-right-messages"></div>
         <div id="animation-overlay"></div>
+        
+        <!-- Message Overlay (new structure) -->
+        <div id="message-overlay" style="display: none;">
+            <div class="pause-menu">
+                <div id="message"></div>
+            </div>
+        </div>
         
         <!-- Pause Menu -->
         <div id="pause-overlay" style="display: none;">
