Fixed key count not showing properly

--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -19,7 +19,7 @@
             <div class="powerup-stats">
                 <div class="key-stat">
                     <div class="key-orb">
-                        <span id="keys">0</span> <!-- The number needs to be inside the orb div -->
+                        <span id="keys">0</span>
                     </div>
                 </div>
                 <div id="map-indicator" class="powerup-indicator" style="display: none;">
@@ -30,7 +30,12 @@
                 </div>
             </div>
             <div class="button-container">
-                <button id="pauseButton" class="icon-button">⏸️</button>
+                <button id="pauseButton" class="icon-button">
+                    <div class="pause-icon">
+                        <div class="pause-bar"></div>
+                        <div class="pause-bar"></div>
+                    </div>
+                </button>
             </div>
         </div>
 
