Added powerup images to the game

--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -17,17 +17,11 @@
             </div>
             <div id="timer">30 s</div>
             <div class="powerup-stats">
-                <div class="key-stat">
-                    <div class="key-orb">
-                        <span id="keys">0</span>
-                    </div>
+                <div class="key-stat" data-count="0">
+                    <div id="keys">0</div>
                 </div>
-                <div id="map-indicator" class="powerup-indicator" style="display: none;">
-                    <div class="map-orb"></div>
-                </div>
-                <div id="crystal-indicator" class="powerup-indicator" style="display: none;">
-                    <div class="crystal-orb"></div>
-                </div>
+                <div id="map-indicator" class="powerup-indicator" style="display: none;"></div>
+                <div id="crystal-indicator" class="powerup-indicator" style="display: none;"></div>
             </div>
             <div class="button-container">
                 <button id="pauseButton" class="icon-button">
