--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -24,6 +24,11 @@
                 <div id="crystal-indicator" class="powerup-indicator" style="display: none;"></div>
             </div>
             <div class="button-container">
+                <!-- Add games played here, before the pause button -->
+                <div class="games-played">
+                    <!-- <span>Maze</span> -->
+                    <span id="gamesPlayedCount">0</span>
+                </div>
                 <button id="pauseButton" class="icon-button">
                     <div class="pause-icon">
                         <div class="pause-bar"></div>
