Customized the games played counter more

--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -24,10 +24,9 @@
                 <div id="crystal-indicator" class="powerup-indicator" style="display: none;"></div>
             </div>
             <div class="button-container">
-                <!-- Add games played here, before the pause button -->
                 <div class="games-played">
-                    <!-- <span>Maze</span> -->
-                    <span id="gamesPlayedCount">0</span>
+                    <span id="gamesPlayedCount"></span>
+                    <!-- <span>Mazes</span> -->
                 </div>
                 <button id="pauseButton" class="icon-button">
                     <div class="pause-icon">
